--- a/StartSch/wwwroot/app.css
+++ b/StartSch/wwwroot/app.css
@@ -1,6 +1,7 @@
 @import "css/buttons.css";
-@import "css/posts.css";
+@import "css/edit.css";
 @import "css/icons.css";
+@import "css/posts.css";
 
 * {
     box-sizing: border-box;
@@ -33,12 +34,7 @@ h1, h2, h3, h4, h5, h6, p, ul, ol, li, a, span, div, input, button, textarea {
     padding: 0;
 }
 
-.tags {
-    display: inline-flex;
-    gap: 8px;
-}
-
-.tags > *, .tag {
+.chip {
     padding: 1px 8px;
     display: inline;
     background: var(--md-sys-color-tertiary-container);
@@ -76,4 +72,20 @@ hr {
     border: none;
     border-top: 1px solid var(--md-sys-color-outline-variant);
     margin: 16px;
+}
+
+input, textarea, select {
+    background-color: var(--md-sys-color-surface-container-high);
+    color: var(--md-sys-color-on-surface);
+    border: none;
+    border-radius: 4px;
+    padding: 4px;
+
+    width: 100%;
+    display: block;
+}
+
+textarea {
+    resize: vertical;
+    max-width: 100%; /* if resize is not supported */
 }
